tests/number_overflow.check
111
<error>
111

1,5: error: number too large
	111 123456789876543211234567898765
	    ^
